syntax = "proto3";

package duality.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/louisbranch/duality-engine/api/gen/go/duality/v1;dualityv1";

message Intermediates {
  int32 base_total = 1;
  int32 total = 2;
  bool is_crit = 3;
  bool meets_difficulty = 4;
  bool hope_gt_fear = 5;
  bool fear_gt_hope = 6;
}

message ExplainStep {
  string code = 1;
  string message = 2;
  google.protobuf.Struct data = 3;
}
